--- a/h7.md
+++ b/h7.md
@@ -110,18 +110,18 @@ Avataan sovellus
     $ ./ts3client_runscript.sh
 
 teamspeak ei tue sudolla avaamista joten saatiin tämmöinen error:
-![error](ts3clienterror.png)
+![error](/kuvat/ts3clienterror.png)
 kun avattiin normaalina käyttäjänä, mutta voidaan painaa ignore ja testata serveriä. Ylemmissä vaiheissa wget ja asennustiedoston ajamisessa ei olisi pitänyt käyttää sudoa, vaan antaa oikeudet chmodilla käyttäjälle ja toimia niin, ettei tulisi erroria. 
 
 Tässä vaiheessa kuitenkin käytän clienttiä vain testatakseni serverin toimivuutta joten ei sillä väliä.
 
-![choosenick](choosenickname.png)
-![connectlocalhost](connect.png)
-![connected](firsttimeconnect.png)
+![choosenick](/kuvat/choosenickname.png)
+![connectlocalhost](/kuvat/connect.png)
+![connected](/kuvat/firsttimeconnect.png)
 
 Ja tässä vaiheessa voidaan antaa token jolla saadaan serverin administrator oikeudet kyseiselle käyttäjälle.
 
-![success](succesfullyused.png)
+![success](/kuvat/succesfullyused.png)
 
 Hyvin toimii ainakin käsin tehtynä, vielä jos tekisin toisin en sorkkisi sudoa kaikkiin kohtiin.
 Voin nyt siirtyä saltilla automatisoimaan.
