--- a/h7.md
+++ b/h7.md
@@ -1188,7 +1188,7 @@ aluksi poistin pyrin poistamaan kaiken mahdollisen
      Done.
 Varmistin vielä, ettei serveri kummittele jotenkin?
 
-![deleted](deleted.PNG)
+![deleted](./kuvat/deleted.PNG)
 
 No ei servu tietenkään toiminut.
 
