--- a/h7.md
+++ b/h7.md
@@ -1974,9 +1974,43 @@ Viimeisenä vielä clientillä yhdistämisen testaus, ja nyt voidaan käyttää 
 
 
 # Hurraa! Koko moduulini toimii haluavamalla tavalla. 
+loppuun vielä lähteet jota minulla on vielä auki:
+
+https://www.hostinger.com/tutorials/how-to-make-a-teamspeak-3-server/
+
+https://stackoverflow.com/questions/31504258/using-file-managed-for-downloading-a-file-in-salt
+
+https://docs.saltstack.com/en/3000/ref/modules/all/salt.modules.file.html
+
+https://medium.com/codemonday/why-when-and-how-to-use-sha256-in-download-2ddd1b9e263b
+
+https://docs.saltstack.com/en/latest/ref/states/all/salt.states.file.html
+
+https://forum.teamspeak.com/threads/137614-COMPLETE-process-of-Teamspeak-3-4-0-install-on-Ubuntu-server-18-04-1-LTS
+
+https://www.teamspeak.com/en/downloads/#server
+
+https://docs.saltstack.com/en/3000/ref/states/all/salt.states.archive.html
+
+https://docs.saltstack.com/en/3000/ref/states/all/salt.states.user.html
+
+https://docs.saltstack.com/en/3000/ref/states/all/salt.states.service.html
+
+https://forum.teamspeak.com/threads/66268-TS3-Server-gt-DatabaseError-out-of-memory
+
+https://docs.saltstack.com/en/3000/ref/states/all/salt.states.group.html
+
+https://docs.saltstack.com/en/latest/ref/states/all/salt.states.cmd.html
+
+https://docs.saltstack.com/en/latest/ref/modules/all/salt.modules.test.html#salt.modules.test.sleep
+
+https://docs.saltstack.com/en/3000/ref/runners/all/salt.runners.test.html
+
+https://www.reddit.com/r/saltstack/comments/bjfsf4/assistance_with_sleep_module_as_a_state/
+
+https://docs.saltstack.com/en/latest/ref/states/all/salt.states.module.html
+
+http://terokarvinen.com/
 
 
-
-
-
-
+Siinäpä taitaakin olla kaikki. 
